Changelog
=========


2.0.2 (unreleased)
------------------

- Added necessary permissions for Admininstrator role
  [lgraf]

- Adjust the tabbedview actions for the templates and templatefolder listings.
  Issue #1315 Aufgabenvorlagen Auflistung: Aktion 'Einfuegen' wird dargestellt.
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1315/
  [phgross]


2.0.1 (2011-11-29)
------------------

- Use the translated_string helper from og.tabbedview wich really translate the string.
  Issue #1268 Falsches Icon bei Aufgabe unter Standardablauf
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1268/
  [phgross]


2.0 (2011-11-17)
----------------

- Issue #1249 Mail: Beim Importieren eines E-Mails muss die Spalte Ausgangsdatum leer bleiben
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1249/
  back to ftw.table helper function for readable_date
  [eschmutz]

- added more templates in integrationtest for better coverage
  [eschmutz]

- added test for tasktemplate view
  [eschmutz]

- added more tests for form
  [eschmutz]

- added functional-tests for templates
  [eschmutz]

- added functional-tests for form
  [eschmutz]


2.0c7 (2011-09-30)
------------------

- added functional-tests for helper
  [eschmutz]

- added functional-tests for vocas
  [eschmutz]

- added integration-tests
  [eschmutz]

- Issue #1198 Tests opengever.tasktemplates
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1198/view
  added testsetup
  [eschmutz]

- Issue #1155 Standardablauf: Fehler beim Feld 'Auftragnehmer' im Editformular
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1155
  [jbaumann]


2.0c6 (2011-08-24)
------------------

- Issue #709 Korrekturen Standardablauf
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/709
  fixed ResponsibleVocabularyFactory, the interactive_users shouldn't get the UsersAndInboxesVocabulary