@@ -5,6 +5,10 @@ Changelog
 2.0.2 (unreleased)
 ------------------
 
+- Removed 'List folder contents' permission from anyone but Manager in
+  tasktemplate and tasktemplatefolder workflows.
+  [lgraf]
+
 - Added necessary permissions for Admininstrator role
   [lgraf]
 
